// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableItemComponent render item component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": "1",
      "paddingLeft": "30",
    }
  }
/>
`;

exports[`TableItemComponent render item component with an external style and children 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": "1",
      "justifyContent": "start",
      "paddingLeft": "30",
    }
  }
>
  <p>
    I'm a children
  </p>
</div>
`;

exports[`TableItemComponent render item component with children 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": "1",
      "paddingLeft": "30",
    }
  }
>
  <p>
    I'm a children
  </p>
</div>
`;
